ot/use_machine.go
//line use_machine.rl:1
// Copyright 2015 Mozilla Foundation, Google, Inc.
// Ported to Go for textshape.
//
// HarfBuzz equivalent: hb-ot-shaper-use-machine.rl

package ot

//line use_machine_ragel.go:12
const useSyllableMachine_start int = 1
const useSyllableMachine_first_final int = 1
const useSyllableMachine_error int = -1

const useSyllableMachine_en_main int = 1

//line use_machine.rl:12

//line use_machine.rl:138

// FindSyllablesUSE finds USE syllable boundaries in the buffer.
// It sets syllables[i].Syllable to (serial << 4 | type) for each glyph.
// HarfBuzz equivalent: find_syllables_use() in hb-ot-shaper-use-machine.hh
func FindSyllablesUSE(syllables []USESyllableInfo) (hasBroken bool) {
	if len(syllables) == 0 {
		return false
	}

	// Build category array, filtering out CGJ and ZWNJ-before-mark.
	// HarfBuzz: find_syllables_use() in hb-ot-shaper-use-machine.hh:906-924
	// Filter 1: not_ccs_default_ignorable filters CGJ
	// Filter 2: ZWNJ is filtered out if the next non-CGJ glyph is a unicode mark
	n := len(syllables)
	data := make([]byte, n)
	mapping := make([]int, 0, n) // Maps filtered index to original index

	for i := 0; i < n; i++ {
		cat := syllables[i].Category
		// Filter 1: Skip CGJ (HarfBuzz: not_ccs_default_ignorable).
		// ZWJ (U+200D) is category CGJ as well (is_CGJ in gen-use-table.py
		// covers Joiner, variation selectors and ZWJ), so it is filtered
		// here too. U+2060 WORD JOINER stays category WJ and is NOT
		// filtered - it breaks clusters and triggers dotted circle
		// insertion for broken syllables.
		if cat == USE_CGJ {
			continue
		}
		// Filter 2: Skip ZWNJ if next non-CGJ glyph is a unicode mark
		// HarfBuzz: hb-ot-shaper-use-machine.hh:914-921
		if cat == USE_ZWNJ {
			filterZWNJ := false
			for j := i + 1; j < n; j++ {
				if syllables[j].Category == USE_CGJ {
					continue // Skip CGJ when looking ahead
				}
				// Found next non-CGJ glyph: filter ZWNJ if it's a mark
				filterZWNJ = IsUnicodeMark(syllables[j].Codepoint)
				break
			}
			if filterZWNJ {
				continue
			}
		}
		data[len(mapping)] = byte(cat)
		mapping = append(mapping, i)
	}

	if len(mapping) == 0 {
		return false
	}

	filteredData := data[:len(mapping)]

	var cs, p, pe, eof, ts, te, act int
	_ = act // Suppress unused variable warning

	pe = len(filteredData)
	eof = pe

	var syllableSerial uint8 = 1

	foundSyllable := func(syllableType USESyllableType) {
		// Map filtered indices back to original indices
		origStart := mapping[ts]
		origEnd := n
		if te < len(mapping) {
			origEnd = mapping[te]
		}

		for i := origStart; i < origEnd; i++ {
			syllables[i].Syllable = (syllableSerial << 4) | uint8(syllableType)
			syllables[i].SyllableType = syllableType
		}
		syllableSerial++
		if syllableSerial == 16 {
			syllableSerial = 1
		}
	}

	// Use filtered data for Ragel
	data = filteredData

//line use_machine_ragel.go:86
	{
		cs = useSyllableMachine_start
		ts = 0
		te = 0
		act = 0
	}

//line use_machine_ragel.go:94
	{
		if p == pe {
			goto _test_eof
		}
		switch cs {
		case 1:
			goto st_case_1
		case 2:
			goto st_case_2
		case 3:
			goto st_case_3
		case 4:
			goto st_case_4
		case 5:
			goto st_case_5
		case 6:
			goto st_case_6
		case 7:
			goto st_case_7
		case 8:
			goto st_case_8
		case 9:
			goto st_case_9
		case 10:
			goto st_case_10
		case 11:
			goto st_case_11
		case 12:
			goto st_case_12
		case 13:
			goto st_case_13
		case 14:
			goto st_case_14
		case 15:
			goto st_case_15
		case 16:
			goto st_case_16
		case 17:
			goto st_case_17
		case 18:
			goto st_case_18
		case 19:
			goto st_case_19
		case 20:
			goto st_case_20
		case 21:
			goto st_case_21
		case 22:
			goto st_case_22
		case 23:
			goto st_case_23
		case 24:
			goto st_case_24
		case 25:
			goto st_case_25
		case 26:
			goto st_case_26
		case 27:
			goto st_case_27
		case 28:
			goto st_case_28
		case 29:
			goto st_case_29
		case 30:
			goto st_case_30
		case 31:
			goto st_case_31
		case 32:
			goto st_case_32
		case 33:
			goto st_case_33
		case 34:
			goto st_case_34
		case 35:
			goto st_case_35
		case 36:
			goto st_case_36
		case 37:
			goto st_case_37
		case 38:
			goto st_case_38
		case 39:
			goto st_case_39
		case 40:
			goto st_case_40
		case 41:
			goto st_case_41
		case 42:
			goto st_case_42
		case 43:
			goto st_case_43
		case 44:
			goto st_case_44
		case 45:
			goto st_case_45
		case 46:
			goto st_case_46
		case 47:
			goto st_case_47
		case 48:
			goto st_case_48
		case 49:
			goto st_case_49
		case 50:
			goto st_case_50
		case 51:
			goto st_case_51
		case 52:
			goto st_case_52
		case 53:
			goto st_case_53
		case 54:
			goto st_case_54
		case 55:
			goto st_case_55
		case 56:
			goto st_case_56
		case 57:
			goto st_case_57
		case 58:
			goto st_case_58
		case 59:
			goto st_case_59
		case 60:
			goto st_case_60
		case 61:
			goto st_case_61
		case 62:
			goto st_case_62
		case 63:
			goto st_case_63
		case 64:
			goto st_case_64
		case 65:
			goto st_case_65
		case 66:
			goto st_case_66
		case 67:
			goto st_case_67
		case 68:
			goto st_case_68
		case 69:
			goto st_case_69
		case 70:
			goto st_case_70
		case 71:
			goto st_case_71
		case 72:
			goto st_case_72
		case 73:
			goto st_case_73
		case 74:
			goto st_case_74
		case 75:
			goto st_case_75
		case 76:
			goto st_case_76
		case 77:
			goto st_case_77
		case 78:
			goto st_case_78
		case 79:
			goto st_case_79
		case 80:
			goto st_case_80
		case 81:
			goto st_case_81
		case 82:
			goto st_case_82
		case 83:
			goto st_case_83
		case 84:
			goto st_case_84
		case 85:
			goto st_case_85
		case 86:
			goto st_case_86
		case 87:
			goto st_case_87
		case 88:
			goto st_case_88
		case 89:
			goto st_case_89
		case 90:
			goto st_case_90
		case 91:
			goto st_case_91
		case 92:
			goto st_case_92
		case 93:
			goto st_case_93
		case 94:
			goto st_case_94
		case 95:
			goto st_case_95
		case 96:
			goto st_case_96
		case 97:
			goto st_case_97
		case 98:
			goto st_case_98
		case 99:
			goto st_case_99
		case 100:
			goto st_case_100
		case 101:
			goto st_case_101
		case 102:
			goto st_case_102
		case 103:
			goto st_case_103
		case 104:
			goto st_case_104
		case 105:
			goto st_case_105
		case 106:
			goto st_case_106
		case 107:
			goto st_case_107
		case 108:
			goto st_case_108
		case 109:
			goto st_case_109
		case 110:
			goto st_case_110
		case 111:
			goto st_case_111
		case 112:
			goto st_case_112
		case 113:
			goto st_case_113
		case 114:
			goto st_case_114
		case 115:
			goto st_case_115
		case 116:
			goto st_case_116
		case 117:
			goto st_case_117
		case 118:
			goto st_case_118
		case 119:
			goto st_case_119
		case 120:
			goto st_case_120
		case 121:
			goto st_case_121
		case 122:
			goto st_case_122
		case 123:
			goto st_case_123
		case 124:
			goto st_case_124
		case 125:
			goto st_case_125
		case 126:
			goto st_case_126
		case 0:
			goto st_case_0
		}
		goto st_out
	tr0:
//line use_machine.rl:131
		p = (te) - 1
		{
			foundSyllable(USE_SymbolCluster)
		}
		goto st1
	tr5:
//line use_machine.rl:135
		te = p + 1
		{
			foundSyllable(USE_NonCluster)
		}
		goto st1
	tr11:
//line use_machine.rl:134
		te = p + 1
		{
			foundSyllable(USE_BrokenCluster)
			hasBroken = true
		}
		goto st1
	tr39:
//line use_machine.rl:131
		te = p
		p--
		{
			foundSyllable(USE_SymbolCluster)
		}
		goto st1
	tr42:
//line use_machine.rl:131
		te = p + 1
		{
			foundSyllable(USE_SymbolCluster)
		}
		goto st1
	tr69:
//line use_machine.rl:128
		te = p
		p--
		{
			foundSyllable(USE_StandardCluster)
		}
		goto st1
	tr71:
//line use_machine.rl:128
		te = p + 1
		{
			foundSyllable(USE_StandardCluster)
		}
		goto st1
	tr96:
//line use_machine.rl:127
		te = p
		p--
		{
			foundSyllable(USE_SakotTerminatedCluster)
		}
		goto st1
	tr98:
//line use_machine.rl:127
		te = p + 1
		{
			foundSyllable(USE_SakotTerminatedCluster)
		}
		goto st1
	tr100:
//line use_machine.rl:126
		te = p
		p--
		{
			foundSyllable(USE_ViramaTerminatedCluster)
		}
		goto st1
	tr101:
//line use_machine.rl:126
		te = p + 1
		{
			foundSyllable(USE_ViramaTerminatedCluster)
		}
		goto st1
	tr102:
//line use_machine.rl:130
		te = p
		p--
		{
			foundSyllable(USE_NumeralCluster)
		}
		goto st1
	tr104:
//line use_machine.rl:130
		te = p + 1
		{
			foundSyllable(USE_NumeralCluster)
		}
		goto st1
	tr105:
//line use_machine.rl:129
		te = p
		p--
		{
			foundSyllable(USE_NumberJoinerTerminatedCluster)
		}
		goto st1
	tr106:
//line use_machine.rl:129
		te = p + 1
		{
			foundSyllable(USE_NumberJoinerTerminatedCluster)
		}
		goto st1
	tr135:
//line use_machine.rl:134
		te = p
		p--
		{
			foundSyllable(USE_BrokenCluster)
			hasBroken = true
		}
		goto st1
	tr137:
//line NONE:1
		switch act {
		case 8:
			{
				p = (te) - 1
				foundSyllable(USE_NonCluster)
			}
		case 9:
			{
				p = (te) - 1
				foundSyllable(USE_BrokenCluster)
				hasBroken = true
			}
		}

		goto st1
	tr141:
//line use_machine.rl:135
		te = p
		p--
		{
			foundSyllable(USE_NonCluster)
		}
		goto st1
	tr142:
//line use_machine.rl:132
		te = p
		p--
		{
			foundSyllable(USE_HieroglyphCluster)
		}
		goto st1
	tr143:
//line use_machine.rl:132
		te = p + 1
		{
			foundSyllable(USE_HieroglyphCluster)
		}
		goto st1
	st1:
//line NONE:1
		ts = 0

		if p++; p == pe {
			goto _test_eof1
		}
	st_case_1:
//line NONE:1
		ts = p

//line use_machine_ragel.go:483
		switch data[p] {
		case 0:
			goto st2
		case 1:
			goto st31
		case 4:
			goto st59
		case 5:
			goto st61
		case 11:
			goto st90
		case 12:
			goto st91
		case 13:
			goto st116
		case 14:
			goto tr11
		case 18:
			goto st118
		case 22:
			goto st104
		case 23:
			goto st92
		case 24:
			goto st93
		case 25:
			goto st94
		case 26:
			goto st95
		case 27:
			goto st108
		case 28:
			goto st110
		case 29:
			goto st111
		case 30:
			goto st112
		case 31:
			goto st90
		case 32:
			goto st113
		case 33:
			goto st105
		case 34:
			goto st106
		case 35:
			goto st107
		case 37:
			goto st99
		case 38:
			goto st100
		case 39:
			goto st101
		case 41:
			goto st119
		case 42:
			goto st120
		case 43:
			goto st121
		case 45:
			goto st96
		case 46:
			goto st97
		case 47:
			goto tr35
		case 49:
			goto st122
		case 51:
			goto tr36
		case 53:
			goto st115
		case 56:
			goto tr38
		}
		if 44 <= data[p] && data[p] <= 48 {
			goto st114
		}
		goto tr5
	st2:
		if p++; p == pe {
			goto _test_eof2
		}
	st_case_2:
		switch data[p] {
		case 11:
			goto st3
		case 12:
			goto st4
		case 14:
			goto tr42
		case 22:
			goto st17
		case 23:
			goto st5
		case 24:
			goto st6
		case 25:
			goto st7
		case 26:
			goto st8
		case 27:
			goto st21
		case 28:
			goto st23
		case 29:
			goto st24
		case 30:
			goto st25
		case 31:
			goto st3
		case 32:
			goto st26
		case 33:
			goto st18
		case 34:
			goto st19
		case 35:
			goto st20
		case 37:
			goto st12
		case 38:
			goto st13
		case 39:
			goto st14
		case 41:
			goto st29
		case 42:
			goto st30
		case 45:
			goto st9
		case 46:
			goto st10
		case 47:
			goto st11
		case 53:
			goto st28
		case 56:
			goto st11
		}
		if 44 <= data[p] && data[p] <= 48 {
			goto st27
		}
		goto tr39
	st3:
		if p++; p == pe {
			goto _test_eof3
		}
	st_case_3:
		switch data[p] {
		case 11:
			goto st3
		case 12:
			goto st4
		case 14:
			goto tr42
		case 22:
			goto st17
		case 23:
			goto st5
		case 24:
			goto st6
		case 25:
			goto st7
		case 26:
			goto st8
		case 27:
			goto st21
		case 28:
			goto st23
		case 29:
			goto st24
		case 30:
			goto st25
		case 31:
			goto st3
		case 32:
			goto st26
		case 33:
			goto st18
		case 34:
			goto st19
		case 35:
			goto st20
		case 37:
			goto st12
		case 38:
			goto st13
		case 39:
			goto st14
		case 45:
			goto st9
		case 46:
			goto st10
		case 47:
			goto st11
		case 53:
			goto st28
		case 56:
			goto st11
		}
		if 44 <= data[p] && data[p] <= 48 {
			goto st27
		}
		goto tr39
	st4:
		if p++; p == pe {
			goto _test_eof4
		}
	st_case_4:
		switch data[p] {
		case 1:
			goto st3
		case 14:
			goto tr42
		case 23:
			goto st5
		case 24:
			goto st6
		case 25:
			goto st7
		case 26:
			goto st8
		case 37:
			goto st12
		case 38:
			goto st13
		case 39:
			goto st14
		case 45:
			goto st9
		case 46:
			goto st10
		case 47:
			goto st11
		case 48:
			goto st15
		case 53:
			goto st5
		}
		goto tr39
	st5:
		if p++; p == pe {
			goto _test_eof5
		}
	st_case_5:
		switch data[p] {
		case 14:
			goto tr42
		case 23:
			goto st5
		case 24:
			goto st6
		case 25:
			goto st7
		case 26:
			goto st8
		case 37:
			goto st12
		case 38:
			goto st13
		case 39:
			goto st14
		case 45:
			goto st9
		case 46:
			goto st10
		case 47:
			goto st11
		case 48:
			goto st15
		}
		goto tr39
	st6:
		if p++; p == pe {
			goto _test_eof6
		}
	st_case_6:
		switch data[p] {
		case 14:
			goto tr42
		case 24:
			goto st6
		case 25:
			goto st7
		case 26:
			goto st8
		case 45:
			goto st9
		case 46:
			goto st10
		case 47:
			goto st11
		}
		goto tr39
	st7:
		if p++; p == pe {
			goto _test_eof7
		}
	st_case_7:
		switch data[p] {
		case 14:
			goto tr42
		case 25:
			goto st7
		case 26:
			goto st8
		case 45:
			goto st9
		case 46:
			goto st10
		case 47:
			goto st11
		}
		goto tr39
	st8:
		if p++; p == pe {
			goto _test_eof8
		}
	st_case_8:
		switch data[p] {
		case 14:
			goto tr42
		case 26:
			goto st8
		case 45:
			goto st9
		case 46:
			goto st10
		case 47:
			goto st11
		}
		goto tr39
	st9:
		if p++; p == pe {
			goto _test_eof9
		}
	st_case_9:
		switch data[p] {
		case 14:
			goto tr42
		case 45:
			goto st9
		case 46:
			goto st10
		}
		goto tr39
	st10:
		if p++; p == pe {
			goto _test_eof10
		}
	st_case_10:
		switch data[p] {
		case 14:
			goto tr42
		case 46:
			goto st10
		}
		goto tr39
	st11:
		if p++; p == pe {
			goto _test_eof11
		}
	st_case_11:
		if data[p] == 14 {
			goto tr42
		}
		goto tr39
	st12:
		if p++; p == pe {
			goto _test_eof12
		}
	st_case_12:
		switch data[p] {
		case 14:
			goto tr42
		case 24:
			goto st6
		case 25:
			goto st7
		case 26:
			goto st8
		case 37:
			goto st12
		case 38:
			goto st13
		case 39:
			goto st14
		case 45:
			goto st9
		case 46:
			goto st10
		case 47:
			goto st11
		case 48:
			goto st15
		}
		goto tr39
	st13:
		if p++; p == pe {
			goto _test_eof13
		}
	st_case_13:
		switch data[p] {
		case 14:
			goto tr42
		case 24:
			goto st6
		case 25:
			goto st7
		case 26:
			goto st8
		case 38:
			goto st13
		case 39:
			goto st14
		case 45:
			goto st9
		case 46:
			goto st10
		case 47:
			goto st11
		case 48:
			goto st15
		}
		goto tr39
	st14:
		if p++; p == pe {
			goto _test_eof14
		}
	st_case_14:
		switch data[p] {
		case 14:
			goto tr42
		case 24:
			goto st6
		case 25:
			goto st7
		case 26:
			goto st8
		case 39:
			goto st14
		case 45:
			goto st9
		case 46:
			goto st10
		case 47:
			goto st11
		case 48:
			goto st15
		}
		goto tr39
	st15:
		if p++; p == pe {
			goto _test_eof15
		}
	st_case_15:
		switch data[p] {
		case 1:
			goto st16
		case 14:
			goto tr42
		}
		goto tr39
	st16:
		if p++; p == pe {
			goto _test_eof16
		}
	st_case_16:
		switch data[p] {
		case 14:
			goto tr42
		case 24:
			goto st6
		case 25:
			goto st7
		case 26:
			goto st8
		case 45:
			goto st9
		case 46:
			goto st10
		case 47:
			goto st11
		case 48:
			goto st15
		}
		goto tr39
	st17:
		if p++; p == pe {
			goto _test_eof17
		}
	st_case_17:
		switch data[p] {
		case 14:
			goto tr42
		case 22:
			goto st17
		case 23:
			goto st5
		case 24:
			goto st6
		case 25:
			goto st7
		case 26:
			goto st8
		case 33:
			goto st18
		case 34:
			goto st19
		case 35:
			goto st20
		case 37:
			goto st12
		case 38:
			goto st13
		case 39:
			goto st14
		case 45:
			goto st9
		case 46:
			goto st10
		case 47:
			goto st11
		case 48:
			goto st15
		case 53:
			goto st5
		}
		goto tr39
	st18:
		if p++; p == pe {
			goto _test_eof18
		}
	st_case_18:
		switch data[p] {
		case 14:
			goto tr42
		case 23:
			goto st5
		case 24:
			goto st6
		case 25:
			goto st7
		case 26:
			goto st8
		case 33:
			goto st18
		case 34:
			goto st19
		case 35:
			goto st20
		case 37:
			goto st12
		case 38:
			goto st13
		case 39:
			goto st14
		case 45:
			goto st9
		case 46:
			goto st10
		case 47:
			goto st11
		case 48:
			goto st15
		case 53:
			goto st5
		}
		goto tr39
	st19:
		if p++; p == pe {
			goto _test_eof19
		}
	st_case_19:
		switch data[p] {
		case 14:
			goto tr42
		case 23:
			goto st5
		case 24:
			goto st6
		case 25:
			goto st7
		case 26:
			goto st8
		case 34:
			goto st19
		case 35:
			goto st20
		case 37:
			goto st12
		case 38:
			goto st13
		case 39:
			goto st14
		case 45:
			goto st9
		case 46:
			goto st10
		case 47:
			goto st11
		case 48:
			goto st15
		case 53:
			goto st5
		}
		goto tr39
	st20:
		if p++; p == pe {
			goto _test_eof20
		}
	st_case_20:
		switch data[p] {
		case 14:
			goto tr42
		case 23:
			goto st5
		case 24:
			goto st6
		case 25:
			goto st7
		case 26:
			goto st8
		case 35:
			goto st20
		case 37:
			goto st12
		case 38:
			goto st13
		case 39:
			goto st14
		case 45:
			goto st9
		case 46:
			goto st10
		case 47:
			goto st11
		case 48:
			goto st15
		case 53:
			goto st5
		}
		goto tr39
	st21:
		if p++; p == pe {
			goto _test_eof21
		}
	st_case_21:
		switch data[p] {
		case 12:
			goto st22
		case 14:
			goto tr42
		case 22:
			goto st17
		case 23:
			goto st5
		case 24:
			goto st6
		case 25:
			goto st7
		case 26:
			goto st8
		case 28:
			goto st23
		case 29:
			goto st24
		case 33:
			goto st18
		case 34:
			goto st19
		case 35:
			goto st20
		case 37:
			goto st12
		case 38:
			goto st13
		case 39:
			goto st14
		case 45:
			goto st9
		case 46:
			goto st10
		case 47:
			goto st11
		case 48:
			goto st15
		case 53:
			goto st5
		}
		goto tr39
	st22:
		if p++; p == pe {
			goto _test_eof22
		}
	st_case_22:
		switch data[p] {
		case 14:
			goto tr42
		case 23:
			goto st5
		case 24:
			goto st6
		case 25:
			goto st7
		case 26:
			goto st8
		case 37:
			goto st12
		case 38:
			goto st13
		case 39:
			goto st14
		case 45:
			goto st9
		case 46:
			goto st10
		case 47:
			goto st11
		case 48:
			goto st15
		case 53:
			goto st5
		}
		goto tr39
	st23:
		if p++; p == pe {
			goto _test_eof23
		}
	st_case_23:
		switch data[p] {
		case 12:
			goto st22
		case 14:
			goto tr42
		case 22:
			goto st17
		case 23:
			goto st5
		case 24:
			goto st6
		case 25:
			goto st7
		case 26:
			goto st8
		case 29:
			goto st24
		case 33:
			goto st18
		case 34:
			goto st19
		case 35:
			goto st20
		case 37:
			goto st12
		case 38:
			goto st13
		case 39:
			goto st14
		case 45:
			goto st9
		case 46:
			goto st10
		case 47:
			goto st11
		case 48:
			goto st15
		case 53:
			goto st5
		}
		goto tr39
	st24:
		if p++; p == pe {
			goto _test_eof24
		}
	st_case_24:
		switch data[p] {
		case 12:
			goto st22
		case 14:
			goto tr42
		case 22:
			goto st17
		case 23:
			goto st5
		case 24:
			goto st6
		case 25:
			goto st7
		case 26:
			goto st8
		case 33:
			goto st18
		case 34:
			goto st19
		case 35:
			goto st20
		case 37:
			goto st12
		case 38:
			goto st13
		case 39:
			goto st14
		case 45:
			goto st9
		case 46:
			goto st10
		case 47:
			goto st11
		case 48:
			goto st15
		case 53:
			goto st5
		}
		goto tr39
	st25:
		if p++; p == pe {
			goto _test_eof25
		}
	st_case_25:
		switch data[p] {
		case 12:
			goto st22
		case 14:
			goto tr42
		case 22:
			goto st17
		case 23:
			goto st5
		case 24:
			goto st6
		case 25:
			goto st7
		case 26:
			goto st8
		case 27:
			goto st21
		case 28:
			goto st23
		case 29:
			goto st24
		case 33:
			goto st18
		case 34:
			goto st19
		case 35:
			goto st20
		case 37:
			goto st12
		case 38:
			goto st13
		case 39:
			goto st14
		case 45:
			goto st9
		case 46:
			goto st10
		case 47:
			goto st11
		case 48:
			goto st15
		case 53:
			goto st5
		}
		goto tr39
	st26:
		if p++; p == pe {
			goto _test_eof26
		}
	st_case_26:
		switch data[p] {
		case 11:
			goto st3
		case 12:
			goto st4
		case 14:
			goto tr42
		case 22:
			goto st17
		case 23:
			goto st5
		case 24:
			goto st6
		case 25:
			goto st7
		case 26:
			goto st8
		case 27:
			goto st21
		case 28:
			goto st23
		case 29:
			goto st24
		case 30:
			goto st25
		case 32:
			goto st26
		case 33:
			goto st18
		case 34:
			goto st19
		case 35:
			goto st20
		case 37:
			goto st12
		case 38:
			goto st13
		case 39:
			goto st14
		case 45:
			goto st9
		case 46:
			goto st10
		case 47:
			goto st11
		case 53:
			goto st28
		case 56:
			goto st11
		}
		if 44 <= data[p] && data[p] <= 48 {
			goto st27
		}
		goto tr39
	st27:
		if p++; p == pe {
			goto _test_eof27
		}
	st_case_27:
		switch data[p] {
		case 1:
			goto st3
		case 14:
			goto tr42
		}
		goto tr39
	st28:
		if p++; p == pe {
			goto _test_eof28
		}
	st_case_28:
		switch data[p] {
		case 1:
			goto st3
		case 14:
			goto tr42
		case 23:
			goto st5
		case 24:
			goto st6
		case 25:
			goto st7
		case 26:
			goto st8
		case 37:
			goto st12
		case 38:
			goto st13
		case 39:
			goto st14
		case 45:
			goto st9
		case 46:
			goto st10
		case 47:
			goto st11
		case 48:
			goto st15
		}
		goto tr39
	st29:
		if p++; p == pe {
			goto _test_eof29
		}
	st_case_29:
		switch data[p] {
		case 14:
			goto tr42
		case 41:
			goto st29
		case 42:
			goto st30
		}
		goto tr39
	st30:
		if p++; p == pe {
			goto _test_eof30
		}
	st_case_30:
		switch data[p] {
		case 14:
			goto tr42
		case 42:
			goto st30
		}
		goto tr39
	st31:
		if p++; p == pe {
			goto _test_eof31
		}
	st_case_31:
		switch data[p] {
		case 11:
			goto st31
		case 12:
			goto st32
		case 14:
			goto tr71
		case 22:
			goto st45
		case 23:
			goto st33
		case 24:
			goto st34
		case 25:
			goto st35
		case 26:
			goto st36
		case 27:
			goto st49
		case 28:
			goto st51
		case 29:
			goto st52
		case 30:
			goto st53
		case 31:
			goto st31
		case 32:
			goto st54
		case 33:
			goto st46
		case 34:
			goto st47
		case 35:
			goto st48
		case 37:
			goto st40
		case 38:
			goto st41
		case 39:
			goto st42
		case 44:
			goto st55
		case 45:
			goto st37
		case 46:
			goto st38
		case 47:
			goto st39
		case 48:
			goto st56
		case 53:
			goto st57
		case 56:
			goto st58
		}
		goto tr69
	st32:
		if p++; p == pe {
			goto _test_eof32
		}
	st_case_32:
		switch data[p] {
		case 1:
			goto st31
		case 14:
			goto tr71
		case 23:
			goto st33
		case 24:
			goto st34
		case 25:
			goto st35
		case 26:
			goto st36
		case 37:
			goto st40
		case 38:
			goto st41
		case 39:
			goto st42
		case 45:
			goto st37
		case 46:
			goto st38
		case 47:
			goto st39
